--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^2.18.0",
+    "apollo-server-express": "^2.21.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.10.0",
+    "graphql": "^15.5.0",
+    "graphql-tools": "^7.0.4",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
