--- a/backend/package.json
+++ b/backend/package.json
@@ -7,13 +7,14 @@
     "dev": "nodemon server.js",
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "migrate": "prisma migrate dev --name init --preview-feature"
+    "migrate": "prisma migrate dev --preview-feature"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^2.18.0",
-    "apollo-server-express": "^2.21.1",
+    "apollo-server-express": "^2.21.2",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
