--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,13 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "formik": "^2.2.6",
+    "graphql": "^15.5.0",
+    "graphql-request": "^3.4.0",
     "node-sass": "^4.14.1",
     "postcss-cli": "^8.3.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-query": "^3.12.1",
+    "react-query": "^3.13.6",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
