--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "dayjs": "^1.10.4",
     "formik": "^2.2.6",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
