--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "formik": "^2.2.6",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
+    "marked": "^2.0.3",
     "node-sass": "^4.14.1",
     "postcss-cli": "^8.3.1",
     "react": "^17.0.1",
