--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "apollo-server-express": "^2.21.2",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "dayjs": "^1.10.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.10.0",
